# ray-tracer

./: .gitignore  Makefile  README.md  boundingbox.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  image.ppm  image2.ppm  interval.hpp  main.cpp  material.hpp  ray.hpp  raytracer  sphere.hpp  util.hpp  vec3.hpp
cpu-image-only/: bvh_node.hpp  camera.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  sphere.hpp
cuda/: CMakeLists.txt
cuda/src/: camera.cuh  client_main.cpp  cuda_bvh.cuh  cuda_utils.cuh  hitrecord.cuh  interactive_camera.cuh  main.cpp  material.cuh  network_protocol.cpp  network_protocol.hpp  ray.cuh  renderer.cu  renderer.cuh  server_main.cpp  sphere.cuh  vec3.cuh
